--- a/notebooks/mvp.ipynb
+++ b/notebooks/mvp.ipynb
@@ -27,7 +27,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-14T23:53:49.646617Z",
+     "start_time": "2019-05-14T23:53:49.330819Z"
+    }
+   },
    "outputs": [],
    "source": [
     "## %%writefile ../src/data/make_dataset.py\n",
@@ -63,7 +68,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Scraping Spruce Eats"
    ]
@@ -71,7 +78,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
@@ -80,7 +89,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Get Drink List"
    ]
@@ -88,7 +99,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def get_spruce_drinks(verbose=False):\n",
@@ -115,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1071,7 +1086,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2034,7 +2051,9 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -2053,7 +2072,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Get Drink Text"
    ]
@@ -2061,7 +2082,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "manhattan = spruce_drinks['Manhattan']\n",
@@ -2073,6 +2096,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -2118,7 +2142,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Get Drink Ingredients"
    ]
@@ -2126,7 +2152,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -4658,7 +4686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
